@startuml
'https://plantuml.com/class-diagram

class Person {
+ firstName : string
+ lastName : string
}

enum TaskStatus {
Created,
Done,
InWork,
Delayed,
Canceled
}

TaskStatus <--* Task
Person <--* Task
class Task {
+ title : string
+ deadLine : DateTime
+ status : TaskStatus
+ executor : Person
}

Task <--* TaskList
class TaskList {
- tasks : Task[]

+ GetAll() : Task[]
+ FindAllByPerson(person : Person) : Task[]
+ FindAllByStatus(status : TaskStatus) : Task[]
+ FindAllByDeadLine(deadLine : DateTime) : Task[]
+ FindAllByTitle(title : string) : Task[]
}

@enduml